header setup without icons/links

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
 <body>
     <header>
-        <img src="imgs/logo.png" alt="ZaatarWZeit logo image">
+        <section id="socialmedia"> <img src="imgs/social media.png" alt="social media icons"></section>
+        <img id="mainlogo" src="imgs/logo.png" alt="ZaatarWZeit logo image">
+        <section id="call">1523 <img src="imgs/call.png" alt="call image"></section>
     </header>
+
 </body>
 
 </html>
