adding main body

--- a/index.html
+++ b/index.html
@@ -9,63 +9,77 @@
 </head>
 
 <body>
-    <header>
-        <section  id="socialmedia"> <img id="socialmediaimg" src="imgs/social media.png" alt="social media icons"></section>
+    <header id="topheader">
+        <section id="socialmedia"> <img id="socialmediaimg" src="imgs/social media.png" alt="social media icons">
+        </section>
         <img id="mainlogo" src="imgs/logo.png" alt="ZaatarWZeit logo image">
         <section id="call">1523 <img src="imgs/call.png" alt="call image"></section>
     </header>
-    <section id="searchmenu">
-        <form>
-            <img src="imgs/search-icon.png" alt="search icon">
-            <input type="text" placeholder="search items">
-        </form>
-        <menu>
-            <li>
-                <p>TEASERS</p>
-            </li>
-            <li>
-                <p>SPECIALTY WRAPS</p>
-            </li>
-            <li>
-                <p>SALADS</p>
-            </li>
-            <li>
-                <p>BURGERS</p>
-            </li>
-            <li>
-                <p>PIZZAS & FLATBREADS</p>
-            </li>
-            <li>
-                <p>HOMEMADE SKILLETS</p>
-            </li>
-            <li>
-                <p>REDEFINING LIGHT</p>
-            </li>
-            <li>
-                <p>MANAKESH</p>
-            </li>
-            <li>
-                <p>TRAVEL BOX</p>
-            </li>
-            <li>
-                <p>KIDS MEAL</p>
-            </li>
-            <li>
-                <p>DESSERTS</p>
-            </li>
-            <li>
-                <p>SIDE ORDERS</p>
-            </li>
-            <li>
-                <p>BEVERAGES</p>
-            </li>
-        </menu>
-    </section>
- <main>
-    <header>
-        <img src="" alt=""><span></span>
-    </header>
- </main>
+    <main>
+        <section id="searchmenu">
+            <form>
+                <img src="imgs/search-icon.png" alt="search icon">
+                <input type="text" placeholder="search items">
+            </form>
+            <menu>
+                <li>
+                    <p>TEASERS</p>
+                </li>
+                <li>
+                    <p>SPECIALTY WRAPS</p>
+                </li>
+                <li>
+                    <p>SALADS</p>
+                </li>
+                <li>
+                    <p>BURGERS</p>
+                </li>
+                <li>
+                    <p>PIZZAS & FLATBREADS</p>
+                </li>
+                <li>
+                    <p>HOMEMADE SKILLETS</p>
+                </li>
+                <li>
+                    <p>REDEFINING LIGHT</p>
+                </li>
+                <li>
+                    <p>MANAKESH</p>
+                </li>
+                <li>
+                    <p>TRAVEL BOX</p>
+                </li>
+                <li>
+                    <p>KIDS MEAL</p>
+                </li>
+                <li>
+                    <p>DESSERTS</p>
+                </li>
+                <li>
+                    <p>SIDE ORDERS</p>
+                </li>
+                <li>
+                    <p>BEVERAGES</p>
+                </li>
+            </menu>
+        </section>
+        <section id="menudisplay">
+            <header id="mainheader">
+                <section id="miscellaneous">
+                    <img src="imgs/FavoritesIcon.png" alt="MyFavorites icon"><span>My Favorites</span>
+                    <img src="imgs/OrdersIcon.png" alt="MyOrders icon"><span>My Orders</span>
+                    <img src="imgs/GiftsIcon.png" alt="MyOrders icon"><span>Gifts Cards</span>
+                </section>
+                <section id="myaccount">
+                    <img src="imgs/myaccounticon.png" alt="user account icon">
+                    <span>My account</span>
+                </section>
+            </header>
+        </section>
+        <section id="shoppingcart">
+            <img src="imgs/basketIcon.png" alt="">
+        </section>
+    </main>
 </body>
 
 </html>
