Adding menus inside body

--- a/index.html
+++ b/index.html
@@ -4,82 +4,172 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/fonts.css">
     <title>ZaatarWZeit Menu</title>
 </head>
 
 <body>
-    <header id="topheader">
-        <section id="socialmedia"> <img id="socialmediaimg" src="imgs/social media.png" alt="social media icons">
-        </section>
-        <img id="mainlogo" src="imgs/logo.png" alt="ZaatarWZeit logo image">
-        <section id="call">1523 <img src="imgs/call.png" alt="call image"></section>
-    </header>
-    <main>
-        <section id="searchmenu">
-            <form>
-                <img src="imgs/search-icon.png" alt="search icon">
-                <input type="text" placeholder="search items">
-            </form>
-            <menu>
-                <li>
-                    <p>TEASERS</p>
-                </li>
-                <li>
-                    <p>SPECIALTY WRAPS</p>
-                </li>
-                <li>
-                    <p>SALADS</p>
-                </li>
-                <li>
-                    <p>BURGERS</p>
-                </li>
-                <li>
-                    <p>PIZZAS & FLATBREADS</p>
-                </li>
-                <li>
-                    <p>HOMEMADE SKILLETS</p>
-                </li>
-                <li>
-                    <p>REDEFINING LIGHT</p>
-                </li>
-                <li>
-                    <p>MANAKESH</p>
-                </li>
-                <li>
-                    <p>TRAVEL BOX</p>
-                </li>
-                <li>
-                    <p>KIDS MEAL</p>
-                </li>
-                <li>
-                    <p>DESSERTS</p>
-                </li>
-                <li>
-                    <p>SIDE ORDERS</p>
-                </li>
-                <li>
-                    <p>BEVERAGES</p>
-                </li>
-            </menu>
-        </section>
-        <section id="menudisplay">
-            <header id="mainheader">
-                <section id="miscellaneous">
-                    <img src="imgs/FavoritesIcon.png" alt="MyFavorites icon"><span>My Favorites</span>
-                    <img src="imgs/OrdersIcon.png" alt="MyOrders icon"><span>My Orders</span>
-                    <img src="imgs/GiftsIcon.png" alt="MyOrders icon"><span>Gifts Cards</span>
-                </section>
-                <section id="myaccount">
-                    <img src="imgs/myaccounticon.png" alt="user account icon">
+    <table id="header">
+        <tr id="topheader">
+            <td id="socialmedia">
+                <img src="imgs/icons/social media.png" alt="social media icons">
+            </td>
+            <td id="mainlogo">
+                <img src="imgs/icons/logo.png" alt="ZaatarWZeit logo image">
+            </td>
+            <td id="call">
+                1523 <img src="imgs/icons/call.png" alt="call image">
+            </td>
+        </tr>
+        <tr id="subheader">
+            <td>
+                <form>
+                    <img id="searchicon" src="imgs/icons/search-icon.png" alt="search icon">
+                    <input type="text" placeholder="search items">
+                </form>
+            </td>
+            <td id="mainheader">
+                <div id="miscellaneous">
+                    <img src="imgs/icons/FavoritesIcon.png" alt="MyFavorites icon"><span>My Favorites</span>
+                    <img src="imgs/icons/OrdersIcon.png" alt="MyOrders icon"><span>My Orders</span>
+                    <img src="imgs/icons/GiftsIcon.png" alt="MyOrders icon"><span>Gifts Cards</span>
+                </div>
+                <div id="myaccount">
+                    <img src="imgs/icons/myaccounticon.png" alt="user account icon">
                     <span>My account</span>
+                </div>
+            </td>
+            <td id="shoppingcart" rowspan="2">
+                <img src="imgs/icons/basketIcon.png" alt="basket icon">
+            </td>
+        </tr>
+        <tr>
+            <td id="searchmenu">
+                <menu>
+                    <li>
+                        <p>TEASERS</p>
+                    </li>
+                    <li>
+                        <p>SPECIALTY WRAPS</p>
+                    </li>
+                    <li>
+                        <p>SALADS</p>
+                    </li>
+                    <li>
+                        <p>BURGERS</p>
+                    </li>
+                    <li>
+                        <p>PIZZAS & FLATBREADS</p>
+                    </li>
+                    <li>
+                        <p>HOMEMADE SKILLETS</p>
+                    </li>
+                    <li>
+                        <p>REDEFINING LIGHT</p>
+                    </li>
+                    <li>
+                        <p>MANAKESH</p>
+                    </li>
+                    <li>
+                        <p>TRAVEL BOX</p>
+                    </li>
+                    <li>
+                        <p>KIDS MEAL</p>
+                    </li>
+                    <li>
+                        <p>DESSERTS</p>
+                    </li>
+                    <li>
+                        <p>SIDE ORDERS</p>
+                    </li>
+                    <li>
+                        <p>BEVERAGES</p>
+                    </li>
+
+                    <li>
+                        <p>TEASERS</p>
+                    </li>
+                    <li>
+                        <p>SPECIALTY WRAPS</p>
+                    </li>
+                    <li>
+                        <p>SALADS</p>
+                    </li>
+                    <li>
+                        <p>BURGERS</p>
+                    </li>
+                    <li>
+                        <p>PIZZAS & FLATBREADS</p>
+                    </li>
+                    <li>
+                        <p>HOMEMADE SKILLETS</p>
+                    </li>
+                    <li>
+                        <p>REDEFINING LIGHT</p>
+                    </li>
+                    <li>
+                        <p>MANAKESH</p>
+                    </li>
+                    <li>
+                        <p>TRAVEL BOX</p>
+                    </li>
+                    <li>
+                        <p>KIDS MEAL</p>
+                    </li>
+                    <li>
+                        <p>DESSERTS</p>
+                    </li>
+                    <li>
+                        <p>SIDE ORDERS</p>
+                    </li>
+                    <li>
+                        <p>BEVERAGES</p>
+                    </li>
+                </menu>
+            </td>
+            <td id="menudisplay">
+                <h1>teasers</h1>
+                <section>
+                    <img src="imgs/menu/The-Starter-Pack.jpg" alt="The starter pack image">
+                    <h3>The starter pack </h3>
+                    <p class="menudescription">
+                        A delicious mix of 8 cheese balls, 3 breaded chicken, 3 halloumi sticks, homegrown fries &
+                        wedges, served with our honey mustard, thousand island and spizy sauce.
+                    </p>
+                    <footer>
+                        <button>add</button>
+                        <button>customize</button>
+                        <div>
+                            <p>15.00 $</p>
+                            <img src="imgs/icons/FavoritesIcon.png" alt="add to favorites">
+                        </div>
+                    </footer>
+
                 </section>
-            </header>
-        </section>
-        <section id="shoppingcart">
-            <img src="imgs/basketIcon.png" alt="">
-        </section>
-    </main>
+                <section>
+                    <img src="imgs/menu/The-Starter-Pack.jpg" alt="The starter pack image">
+                    <h3>The starter pack </h3>
+                    <p class="menudescription">
+                        A delicious mix of 8 cheese balls, 3 breaded chicken, 3 halloumi sticks, homegrown fries &
+                        wedges, served with our honey mustard, thousand island and spizy sauce.
+                    </p>
+                    <footer>
+                        <button>add</button>
+                        <button>customize</button>
+                        <div>
+                            <p>15.00 $</p>
+                            <img src="imgs/icons/FavoritesIcon.png" alt="add to favorites">
+                        </div>
+                    </footer>
+
+                </section>
+            </td>
+            
+
+        </tr>
+    </table>
+
 </body>
 
 </html>
