--- a/index.html
+++ b/index.html
@@ -13,13 +13,27 @@
     <table id="header">
         <tr id="topheader">
             <td id="socialmedia">
-                <img src="imgs/icons/social media.png" alt="social media icons">
+                <div>
+                    <a href="https://www.facebook.com/zaatarwzeit/"><img src="imgs/icons/facebook.png"
+                            alt="facebook logo"></a>
+                    <a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fzaatarwzeit"><img
+                            src="imgs/icons/twitter.png" alt="twitter logo"></a>
+                    <a href="https://www.instagram.com/zaatarwzeit/"><img src="imgs/icons/instagram.png"
+                            alt="instagram logo"></a>
+                    <a href="https://www.tiktok.com/@zaatarwzeit"><img src="imgs/icons/tiktok.png"
+                            alt="tiktok logo"></a>
+                    <a href="https://www.linkedin.com/company/zaatarwzeit/"><img src="imgs/icons/linkedin.png"
+                            alt="linkedin logo"></a>
+                </div>
+
             </td>
             <td id="mainlogo">
                 <img src="imgs/icons/logo.png" alt="ZaatarWZeit logo image">
             </td>
             <td id="call">
-                1523 <img src="imgs/icons/call.png" alt="call image">
+                <p>1523</p><img src="imgs/icons/call.png" alt="call image">
+                <img src="imgs/icons/whitebasketicon.png" alt="cart icon">
+                <img src="imgs/icons/itemscount.png" alt="items count">
             </td>
         </tr>
         <tr id="subheader">
@@ -30,14 +44,13 @@
                 </form>
             </td>
             <td id="mainheader">
-                <div id="miscellaneous">
-                    <img src="imgs/icons/FavoritesIcon.png" alt="MyFavorites icon"><span>My Favorites</span>
-                    <img src="imgs/icons/OrdersIcon.png" alt="MyOrders icon"><span>My Orders</span>
-                    <img src="imgs/icons/GiftsIcon.png" alt="MyOrders icon"><span>Gifts Cards</span>
+                <div class="mainheadericons">
+                    <span><img src="imgs/icons/FavoritesIcon.png" alt="MyFavorites icon">My Favorites</span>
+                    <span><img src="imgs/icons/OrdersIcon.png" alt="MyOrders icon">My Orders</span>
+                    <span><img src="imgs/icons/GiftsIcon.png" alt="MyOrders icon">Gifts Cards</span>
                 </div>
-                <div id="myaccount">
-                    <img src="imgs/icons/myaccounticon.png" alt="user account icon">
-                    <span>My account</span>
+                <div class="mainheadericons">
+                    <span><img src="imgs/icons/myaccounticon.png" alt="user account icon">My account</span>
                 </div>
             </td>
             <td id="shoppingcart" rowspan="2">
@@ -111,8 +124,7 @@
                         <button>customize</button>
                         <div>
                             <p>15.00 $</p>
-                            <img class="favoriteicon" src="imgs/icons/FavoritesIcon.png" alt="add to favorites">
-                        </div>
+                            <div class="favoriteicon"></div>
                     </footer>
 
                 </section>
@@ -130,7 +142,7 @@
                         <button>customize</button>
                         <div>
                             <p>7.50 $</p>
-                            <img class="favoriteicon" src="imgs/icons/FavoritesIcon.png" alt="add to favorites">
+                            <div class="favoriteicon"></div>
                         </div>
                     </footer>
 
@@ -149,7 +161,7 @@
                         <button>customize</button>
                         <div>
                             <p>5.00 $</p>
-                            <img class="favoriteicon" src="imgs/icons/FavoritesIcon.png" alt="add to favorites">
+                            <div class="favoriteicon"></div>
                         </div>
                     </footer>
 
@@ -168,7 +180,7 @@
                         <button>customize</button>
                         <div>
                             <p>7.50 $</p>
-                            <img class="favoriteicon" src="imgs/icons/FavoritesIcon.png" alt="add to favorites">
+                            <div class="favoriteicon"></div>
                         </div>
                     </footer>
 
@@ -187,7 +199,7 @@
                         <button>customize</button>
                         <div>
                             <p>3.00 $</p>
-                            <img class="favoriteicon" src="imgs/icons/FavoritesIcon.png" alt="add to favorites">
+                            <div class="favoriteicon"></div>
                         </div>
                     </footer>
 
@@ -206,7 +218,7 @@
                         <button>customize</button>
                         <div>
                             <p>6.00 $</p>
-                            <img class="favoriteicon" src="imgs/icons/FavoritesIcon.png" alt="add to favorites">
+                            <div class="favoriteicon"></div>
                         </div>
                     </footer>
 
@@ -225,7 +237,7 @@
                         <button>customize</button>
                         <div>
                             <p>4.00 $</p>
-                            <img class="favoriteicon" src="imgs/icons/FavoritesIcon.png" alt="add to favorites">
+                            <div class="favoriteicon"></div>
                         </div>
                     </footer>
                 </section>
@@ -245,7 +257,7 @@
                         <button>customize</button>
                         <div>
                             <p>8.00 $</p>
-                            <img class="favoriteicon" src="imgs/icons/FavoritesIcon.png" alt="add to favorites">
+                            <div class="favoriteicon"></div>
                         </div>
                     </footer>
                 </section>
@@ -265,7 +277,7 @@
                         <button>customize</button>
                         <div>
                             <p>2.50 $</p>
-                            <img class="favoriteicon" src="imgs/icons/FavoritesIcon.png" alt="add to favorites">
+                            <div class="favoriteicon"></div>
                         </div>
                     </footer>
                 </section>
@@ -285,7 +297,7 @@
                         <button>customize</button>
                         <div>
                             <p>5.50 $</p>
-                            <img class="favoriteicon" src="imgs/icons/FavoritesIcon.png" alt="add to favorites">
+                            <div class="favoriteicon"></div>
                         </div>
                     </footer>
                 </section>
@@ -305,7 +317,7 @@
                         <button>customize</button>
                         <div>
                             <p>2.00 $</p>
-                            <img class="favoriteicon" src="imgs/icons/FavoritesIcon.png" alt="add to favorites">
+                            <div class="favoriteicon"></div>
                         </div>
                     </footer>
                 </section>
@@ -325,7 +337,7 @@
                         <button>customize</button>
                         <div>
                             <p>4.50 $</p>
-                            <img class="favoriteicon" src="imgs/icons/FavoritesIcon.png" alt="add to favorites">
+                            <div class="favoriteicon"></div>
                         </div>
                     </footer>
                 </section>
