adding final adjustments

--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
                     <p>NEWS</p>
                     <p>Gift Cards</p>
                     <div>
-                        <img src="imgs/icons/getappandroid.png" alt="get app on android device">
-                        <img src="imgs/icons/getappapple.png" alt="get app on apple device">
+                        <a href="https://play.google.com/store/apps/details?id=com.koein.zwz"><img
+                                src="imgs/icons/getappandroid.png" alt="get app on android device"></a>
+                        <a href="https://apps.apple.com/lb/app/zaatar-w-zeit/id1166494577"><img
+                                src="imgs/icons/getappapple.png" alt="get app on apple device"></a>
                     </div>
                 </section>
             </td>
