adding flexbox to main header

--- a/index.html
+++ b/index.html
@@ -10,32 +10,32 @@
 </head>
 
 <body>
-    <table id="header">
-        <tr id="topheader">
-            <td id="socialmedia">
-                <div>
-                    <a href="https://www.facebook.com/zaatarwzeit/"><img src="imgs/icons/facebook.png"
-                            alt="facebook logo"></a>
-                    <a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fzaatarwzeit"><img
-                            src="imgs/icons/twitter.png" alt="twitter logo"></a>
-                    <a href="https://www.instagram.com/zaatarwzeit/"><img src="imgs/icons/instagram.png"
-                            alt="instagram logo"></a>
-                    <a href="https://www.tiktok.com/@zaatarwzeit"><img src="imgs/icons/tiktok.png"
-                            alt="tiktok logo"></a>
-                    <a href="https://www.linkedin.com/company/zaatarwzeit/"><img src="imgs/icons/linkedin.png"
-                            alt="linkedin logo"></a>
-                </div>
 
-            </td>
-            <td id="mainlogo">
-                <img src="imgs/icons/logo.png" alt="ZaatarWZeit logo image">
-            </td>
-            <td id="call">
-                <p>1523</p><img src="imgs/icons/call.png" alt="call image">
-                <img src="imgs/icons/whitebasketicon.png" alt="cart icon">
-                <img src="imgs/icons/itemscount.png" alt="items count">
-            </td>
-        </tr>
+    <header id="topheader">
+        <div id="socialmedia">
+            <div>
+                <a href="https://www.facebook.com/zaatarwzeit/"><img src="imgs/icons/facebook.png"
+                        alt="facebook logo"></a>
+                <a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fzaatarwzeit"><img
+                        src="imgs/icons/twitter.png" alt="twitter logo"></a>
+                <a href="https://www.instagram.com/zaatarwzeit/"><img src="imgs/icons/instagram.png"
+                        alt="instagram logo"></a>
+                <a href="https://www.tiktok.com/@zaatarwzeit"><img src="imgs/icons/tiktok.png" alt="tiktok logo"></a>
+                <a href="https://www.linkedin.com/company/zaatarwzeit/"><img src="imgs/icons/linkedin.png"
+                        alt="linkedin logo"></a>
+            </div>
+
+        </div>
+        <div id="mainlogo">
+            <img src="imgs/icons/logo.png" alt="ZaatarWZeit logo image">
+        </div>
+        <div id="call">
+            <p>1523</p><img src="imgs/icons/call.png" alt="call image">
+            <img src="imgs/icons/whitebasketicon.png" alt="cart icon">
+            <img src="imgs/icons/itemscount.png" alt="items count">
+        </div>
+    </header>
+    <table id="header">
         <tr id="subheader">
             <td>
                 <form>
