cleaning up code/comments

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="mainheadericons">
                     <span><img src="assets/icons/FavoritesIcon.png" alt="MyFavorites icon">My Favorites</span>
                     <span><img src="assets/icons/OrdersIcon.png" alt="MyOrders icon">My Orders</span>
-                    <span><img src="assets/icons/GiftsIcon.png" alt="MyOrders icon">Gifts Cards</span>
+                    <span><img src="assets/icons/GiftsIcon.png" alt="Gift icon">Gifts Cards</span>
                 </div>
                 <div class="mainheadericons">
                     <span><img src="assets/icons/myaccounticon.png" alt="user account icon">My account</span>
