correcting directory links for google and android apps images

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                     <p>Gift Cards</p>
                     <div>
                         <a href="https://play.google.com/store/apps/details?id=com.koein.zwz"><img
-                                src="imgs/icons/getappandroid.png" alt="get app on android device"></a>
+                                src="assets/icons/getappandroid.png" alt="get app on android device"></a>
                         <a href="https://apps.apple.com/lb/app/zaatar-w-zeit/id1166494577"><img
-                                src="imgs/icons/getappapple.png" alt="get app on apple device"></a>
+                                src="assets/icons/getappapple.png" alt="get app on apple device"></a>
                     </div>
                 </section>
             </td>
